--- a/app/composer.json
+++ b/app/composer.json
@@ -2,8 +2,8 @@
     "require": {
         "twilio/sdk": "^5.7",
         "guzzlehttp/guzzle": "^6.2"
+    },
+    "require-dev": {
+        "symfony/dotenv": "^3.4"
     }
 }
-
-
-
