--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,17 @@ web:
      - "8011:80"
    volumes:
      - ./app:/var/www/html/
-
+   links:
+     - db
+db:
+   image: mariadb
+   restart: always
+   volumes:
+   - ./mysql:/var/lib/mysql
+   environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_USER: admin
+      MYSQL_PASSWORD: test
+      MYSQL_DATABASE: database
+   ports:
+   - "8889:3306"
