--- a/app/src/.env
+++ b/app/src/.env
@@ -12,3 +12,4 @@ VOUCHER_VALUE=10.00
 VOUCHER_TRESHOLD=200.00
 TWILIO_SID=AC4eb0554545d14cfad626a485dcc1c043
 TWILIO_TOKEN=3ecd90aa438f9d2a69120ff069e22b4c
+LOYALTY_STATIC=http://www.web07.vivastreet.com/s/espace-pro
